backend-server/k8s-services/harbor/harbor-ingressroute.yaml
# harbor-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: harbor-strip-prefix
  namespace: harbor
spec:
  stripPrefix:
    prefixes:
      - /harbor

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`93d92c4a-e3bf-4ea6-93c6.afab44153cac.isard.nuvulet.itb.cat`) && PathPrefix(`/harbor`)
      middlewares:
        - name: harbor-strip-prefix
      services:
        - name: harbor-nginx
          port: 8080
  tls: {}
